Added docker images & jupyter notebooks
* The docker images can be found at: https://hub.docker.com/repository/docker/boraborapalm/synthetic_mrsi/general
* Three notebooks are included:
   -> one for the cartesian simulation
   -> one for the non-cartesian simulation (uncompleted)
   -> one for WET (uncompleted)

* Need to fix that always on GPU 0 memory is allocated
* Need to add noise and B0 to cartesian simulation

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -20,4 +20,29 @@
   url       = {https://cds.ismrm.org/protected/06MProceedings/PDFfiles/00926.pdf}
 }
 
+# Taken fpr T2 values at 7 Tesla
+@article{versteeg2024high,
+  title={High SNR full brain relaxometry at 7T by accelerated MR-STAT},
+  author={Versteeg, Edwin and Liu, Hongyan and van der Heide, Oscar and Fuderer, Miha and van den Berg, Cornelis AT and Sbrizzi, Alessandro},
+  journal={Magnetic Resonance in Medicine},
+  volume={92},
+  number={1},
+  pages={226--235},
+  year={2024},
+  publisher={Wiley Online Library}
+}
+
+# Another source for 7T T2 values
+@article{seginer2022phase,
+  title={Phase-based fast 3D high-resolution quantitative T2 MRI in 7 T human brain imaging},
+  author={Seginer, Amir and Schmidt, Rita},
+  journal={Scientific reports},
+  volume={12},
+  number={1},
+  pages={14088},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
+
 
