Working on GPU memory allocation issue: local cupy pool
When running a lambda (anonymous) function in GPUTools.run_cupy_local_pool and returning on device 'cuda',
and then trying with GPUTools.to_device(..., device="cpu") it does not free up the cuda memory.

Note: This issue is not yet solved. This commit is just some kind of backup.

--- a/code/Untitled.ipynb
+++ b/code/Untitled.ipynb
@@ -569,8 +569,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0761e38b-bbc2-4987-8f42-463af4369f3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cupyx.scipy.ndimage import zoom\n",
+    "from tools import GPUTools, SpaceEstimator\n",
+    "import numpy as np\n",
+    "import cupy as cp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d10b98b8-11ad-46bb-92ad-dd0d64f3e483",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.1, 1.1, 1.1, 1. , 1. ])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_np = np.random.randn(100,100,100, 10, 10)\n",
+    "SpaceEstimator.for_array(array_np)\n",
+    "\n",
+    "array = array_np\n",
+    "\n",
+    "zoom_factor = np.divide((110,110,110, 10, 10), (100,100,100, 10, 10))\n",
+    "zoom_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2a149377-6482-4cba-922c-efa1d89326c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order = 1\n",
+    "target_gpu=2\n",
+    "return_on_device=\"gpu\"\n",
+    "\n",
+    "array = GPUTools.run_cupy_local_pool(\n",
+    "    working_function=lambda: zoom(\n",
+    "        input=(array if isinstance(array, cp.ndarray) else cp.asarray(array)),\n",
+    "        zoom=zoom_factor,\n",
+    "        order=order\n",
+    "    ),\n",
+    "    target_gpu=target_gpu,\n",
+    "    return_device=return_on_device\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3e85f64f-e32a-4d6b-99bb-4d06b8a3febe",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'x' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m array \u001b[38;5;241m=\u001b[39m \u001b[43mGPUTools\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_device\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcpu\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_gpu\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/home/mschuster/Synthetic_MRSI_PhD/Synthetic_MRSI/code/tools.py:1866\u001b[0m, in \u001b[0;36mGPUTools.to_device\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m   1862\u001b[0m         \u001b[38;5;28;01mdel\u001b[39;00m x\n\u001b[1;32m   1863\u001b[0m         GPUTools\u001b[38;5;241m.\u001b[39m_free_cuda_memory(x_device_id)\n\u001b[0;32m-> 1866\u001b[0m     x_cpu \u001b[38;5;241m=\u001b[39m GPUTools\u001b[38;5;241m.\u001b[39mto_numpy(\u001b[43mx\u001b[49m)\n\u001b[1;32m   1868\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x_cpu\n\u001b[1;32m   1869\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m device \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpu\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'x' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "array = GPUTools.to_device(array, \"cpu\", target_gpu=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a8c8cb71-e2b8-4232-9942-af950d09c5e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6b78d5bd-c151-49f5-8d3a-e903ce487d09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with cp.cuda.Device(2):\n",
+    "    cp.cuda.get_current_stream().synchronize()\n",
+    "    cp.get_default_memory_pool().free_all_blocks()\n",
+    "    cp.get_default_pinned_memory_pool().free_all_blocks()  # optional, for host-pinned buffers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bd907e3d-d4a8-4b96-8833-6f769d03a21a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with cp.cuda.Device(2):\n",
+    "    _ = array.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1958ceee-1304-437e-a281-fdfbd31162b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cp.cuda.runtime.deviceCanAccessPeer(3, array.device.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a7c72d73-9b8a-4e45-8ab4-e16ff5554407",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cp.cuda.runtime.deviceEnablePeerAccess(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9271e8c7-b77e-4df6-9aa2-c4c546f5bdb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "634ee989-62e4-4a26-8dc1-32ef73481bf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<CUDA Device 3>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GPUTools.to_device(array, \"gpu\", target_gpu=3).device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "926f82c1-bcf9-483c-b686-08be4efd5bb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cupy as cp\n",
+    "print(type(array))\n",
+    "if isinstance(array, cp.ndarray):\n",
+    "    print(\"src device:\", array.device.id)\n",
+    "print(\"device count:\", cp.cuda.runtime.getDeviceCount())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d3c6097d-7374-450c-abab-5bb18cbc986c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cupy as cp\n",
+    "src = 2\n",
+    "dst = 3\n",
+    "print(cp.cuda.runtime.deviceCanAccessPeer(dst, src))  # 1 oder 0\n",
+    "print(cp.cuda.runtime.deviceCanAccessPeer(src, dst))  # 1 oder 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cdb268dd-a2ad-4415-a797-580007a2e1f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CUDARuntimeError",
+     "evalue": "cudaErrorInvalidValue: invalid argument",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCUDARuntimeError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m cp\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mDevice(dst):\n\u001b[0;32m---> 16\u001b[0m     x_on_dst \u001b[38;5;241m=\u001b[39m \u001b[43mcp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# erzwingt echte Kopie auf dst\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/conda/envs/MRSI_simulation/lib/python3.10/site-packages/cupy/_creation/from_data.py:53\u001b[0m, in \u001b[0;36marray\u001b[0;34m(obj, dtype, copy, order, subok, ndmin, blocking)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21marray\u001b[39m(obj, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, order\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mK\u001b[39m\u001b[38;5;124m'\u001b[39m, subok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, ndmin\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m*\u001b[39m,\n\u001b[1;32m      8\u001b[0m           blocking\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m      9\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Creates an array on the current device.\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \n\u001b[1;32m     11\u001b[0m \u001b[38;5;124;03m    This function currently does not support the ``subok`` option.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     51\u001b[0m \n\u001b[1;32m     52\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 53\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_core\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubok\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mndmin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mblocking\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32mcupy/_core/core.pyx:2502\u001b[0m, in \u001b[0;36mcupy._core.core.array\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/_core/core.pyx:2512\u001b[0m, in \u001b[0;36mcupy._core.core.array\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/_core/core.pyx:2545\u001b[0m, in \u001b[0;36mcupy._core.core._array_from_cupy_ndarray\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/_core/core.pyx:742\u001b[0m, in \u001b[0;36mcupy._core.core._ndarray_base.copy\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/_core/core.pyx:743\u001b[0m, in \u001b[0;36mcupy._core.core._ndarray_base.copy\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/cuda/memory.pyx:538\u001b[0m, in \u001b[0;36mcupy.cuda.memory.MemoryPointer.copy_from_device_async\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy_backends/cuda/api/runtime.pyx:636\u001b[0m, in \u001b[0;36mcupy_backends.cuda.api.runtime.memcpyAsync\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy_backends/cuda/api/runtime.pyx:146\u001b[0m, in \u001b[0;36mcupy_backends.cuda.api.runtime.check_status\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mCUDARuntimeError\u001b[0m: cudaErrorInvalidValue: invalid argument"
+     ]
+    }
+   ],
+   "source": [
+    "src, dst = 2, 3\n",
+    "\n",
+    "with cp.cuda.Device(dst):\n",
+    "    try:\n",
+    "        cp.cuda.runtime.deviceEnablePeerAccess(src)\n",
+    "    except cp.cuda.runtime.CUDARuntimeError:\n",
+    "        pass\n",
+    "\n",
+    "with cp.cuda.Device(src):\n",
+    "    try:\n",
+    "        cp.cuda.runtime.deviceEnablePeerAccess(dst)\n",
+    "    except cp.cuda.runtime.CUDARuntimeError:\n",
+    "        pass\n",
+    "\n",
+    "with cp.cuda.Device(dst):\n",
+    "    x_on_dst = cp.array(array, copy=True)  # erzwingt echte Kopie auf dst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "061a195e-7793-409b-9a31-1f7a3421ed4a",
    "metadata": {},
    "outputs": [],
    "source": []
