Solved issue: GPU allocation issue with local cupy pool
Affected function: GPUTools.run_cupy_local_pool

When returning on 'gpu' then there was an issue after bringing the array to the cpu with freeing
up the cuda memory used before. Now, after still on GPU and calling GPUTools.to_device works for the
cases:
  a) device="cpu"
  b) device="gpu", with other target_gpu

however, to work, the following need to be called:
  1) delete old variable which points to the old gpu
  2) run GPUTools.free_cuda_after_del_cupy(pass id of previous used GPU)

So, this means also that for GPUTools.to_device
  1) It can bring with this procedure successful array: cupy -> cpu
  2) it can bring with this procedure successful array: cupy (on GPU X) -> cupy (on GPU Y)
  ...and also frees the used cuda of the old variable as good as possible. Still some MB are remaining by default.

--- a/code/Untitled.ipynb
+++ b/code/Untitled.ipynb
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "2a149377-6482-4cba-922c-efa1d89326c4",
    "metadata": {},
    "outputs": [],
@@ -631,25 +631,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3e85f64f-e32a-4d6b-99bb-4d06b8a3febe",
+   "execution_count": 10,
+   "id": "32fd90f8-c4aa-4b80-a784-5781ac7cd801",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'x' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m array \u001b[38;5;241m=\u001b[39m \u001b[43mGPUTools\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_device\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcpu\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_gpu\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/home/mschuster/Synthetic_MRSI_PhD/Synthetic_MRSI/code/tools.py:1866\u001b[0m, in \u001b[0;36mGPUTools.to_device\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m   1862\u001b[0m         \u001b[38;5;28;01mdel\u001b[39;00m x\n\u001b[1;32m   1863\u001b[0m         GPUTools\u001b[38;5;241m.\u001b[39m_free_cuda_memory(x_device_id)\n\u001b[0;32m-> 1866\u001b[0m     x_cpu \u001b[38;5;241m=\u001b[39m GPUTools\u001b[38;5;241m.\u001b[39mto_numpy(\u001b[43mx\u001b[49m)\n\u001b[1;32m   1868\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x_cpu\n\u001b[1;32m   1869\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m device \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpu\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'x' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  2  ][ \u001b[93mwarning\u001b[0m ] ---v  (automatic line breaks) \n",
+      "                      Moved cupy array from GPU 2 to GPU 3. Delete with 'del' old variable and call\n",
+      "                      'GPUTools.free_cuda_after_del_cupy' to free up unused cuda memory of old variable.\n"
      ]
     }
    ],
    "source": [
-    "array = GPUTools.to_device(array, \"cpu\", target_gpu=3)"
+    "array_gpu_3 = GPUTools.to_device(array, device=\"gpu\", target_gpu=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4d4b43c1-37c2-4b5a-a51e-a54811267204",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_gpu_id = array.device.id\n",
+    "del array\n",
+    "GPUTools.free_cuda_after_del_cupy(array_gpu_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20eb1444-7688-4591-9da3-524103a2f945",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GPU -> CPU works in this way!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4bfdfa7c-2203-44a8-9370-bd516b24b27b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1  ][ \u001b[93mwarning\u001b[0m ] ---v  (automatic line breaks) \n",
+      "                      Cupy array transferred from GPU 2 to CPU. Delete old cupy variable if not longer used and call\n",
+      "                      'GPUTools.free_cuda_after_del_cupy(device_idx=2)'\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_numpy = GPUTools.to_device(array, device=\"cpu\")\n",
+    "array_gpu_id = array.device.id\n",
+    "del array\n",
+    "GPUTools.free_cuda_after_del_cupy(array_gpu_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ad7a7a0-5548-4f24-a3ef-62d310623dbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3e85f64f-e32a-4d6b-99bb-4d06b8a3febe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#array = GPUTools.to_device(array, \"cpu\", target_gpu=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f6e1ad2d-756b-4f36-88ad-5e1f999bc234",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def free_cuda_after_del(gpu_idx):\n",
+    "\n",
+    "    with cp.cuda.Device(gpu_idx):\n",
+    "        cp.cuda.get_current_stream().synchronize()\n",
+    "        cp.get_default_memory_pool().free_all_blocks()\n",
+    "        cp.get_default_pinned_memory_pool().free_all_blocks()  # optional, for host-pinned buffers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0444d47d-12b4-4a0c-bf0a-a60e17ef0627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_idx = array.device.id\n",
+    "del array\n",
+    "\n",
+    "free_cuda(array_idx)"
    ]
   },
   {
@@ -796,48 +884,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "cdb268dd-a2ad-4415-a797-580007a2e1f8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "CUDARuntimeError",
-     "evalue": "cudaErrorInvalidValue: invalid argument",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCUDARuntimeError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m cp\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mDevice(dst):\n\u001b[0;32m---> 16\u001b[0m     x_on_dst \u001b[38;5;241m=\u001b[39m \u001b[43mcp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# erzwingt echte Kopie auf dst\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/conda/envs/MRSI_simulation/lib/python3.10/site-packages/cupy/_creation/from_data.py:53\u001b[0m, in \u001b[0;36marray\u001b[0;34m(obj, dtype, copy, order, subok, ndmin, blocking)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21marray\u001b[39m(obj, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, order\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mK\u001b[39m\u001b[38;5;124m'\u001b[39m, subok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, ndmin\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m*\u001b[39m,\n\u001b[1;32m      8\u001b[0m           blocking\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m      9\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Creates an array on the current device.\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \n\u001b[1;32m     11\u001b[0m \u001b[38;5;124;03m    This function currently does not support the ``subok`` option.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     51\u001b[0m \n\u001b[1;32m     52\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 53\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_core\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubok\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mndmin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mblocking\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32mcupy/_core/core.pyx:2502\u001b[0m, in \u001b[0;36mcupy._core.core.array\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mcupy/_core/core.pyx:2512\u001b[0m, in \u001b[0;36mcupy._core.core.array\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mcupy/_core/core.pyx:2545\u001b[0m, in \u001b[0;36mcupy._core.core._array_from_cupy_ndarray\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mcupy/_core/core.pyx:742\u001b[0m, in \u001b[0;36mcupy._core.core._ndarray_base.copy\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mcupy/_core/core.pyx:743\u001b[0m, in \u001b[0;36mcupy._core.core._ndarray_base.copy\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mcupy/cuda/memory.pyx:538\u001b[0m, in \u001b[0;36mcupy.cuda.memory.MemoryPointer.copy_from_device_async\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mcupy_backends/cuda/api/runtime.pyx:636\u001b[0m, in \u001b[0;36mcupy_backends.cuda.api.runtime.memcpyAsync\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mcupy_backends/cuda/api/runtime.pyx:146\u001b[0m, in \u001b[0;36mcupy_backends.cuda.api.runtime.check_status\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mCUDARuntimeError\u001b[0m: cudaErrorInvalidValue: invalid argument"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "src, dst = 2, 3\n",
-    "\n",
-    "with cp.cuda.Device(dst):\n",
-    "    try:\n",
-    "        cp.cuda.runtime.deviceEnablePeerAccess(src)\n",
-    "    except cp.cuda.runtime.CUDARuntimeError:\n",
-    "        pass\n",
-    "\n",
-    "with cp.cuda.Device(src):\n",
-    "    try:\n",
-    "        cp.cuda.runtime.deviceEnablePeerAccess(dst)\n",
-    "    except cp.cuda.runtime.CUDARuntimeError:\n",
-    "        pass\n",
-    "\n",
-    "with cp.cuda.Device(dst):\n",
-    "    x_on_dst = cp.array(array, copy=True)  # erzwingt echte Kopie auf dst"
+    "###src, dst = 2, 3\n",
+    "###\n",
+    "###with cp.cuda.Device(dst):\n",
+    "###    try:\n",
+    "###        cp.cuda.runtime.deviceEnablePeerAccess(src)\n",
+    "###    except cp.cuda.runtime.CUDARuntimeError:\n",
+    "###        pass\n",
+    "###\n",
+    "###with cp.cuda.Device(src):\n",
+    "###    try:\n",
+    "###        cp.cuda.runtime.deviceEnablePeerAccess(dst)\n",
+    "###    except cp.cuda.runtime.CUDARuntimeError:\n",
+    "###        pass\n",
+    "###\n",
+    "###with cp.cuda.Device(dst):\n",
+    "###    x_on_dst = cp.array(array, copy=True)  # erzwingt echte Kopie auf dst"
    ]
   },
   {
