Working on GPU0 allocation issue in sampling.coil_combination
There is still an issue on allocating VRAM on the default GPU (GPU0).
However, the in the code in the main notebook it could be solved.

Note: This issue still resides in the sampling.coil_combination method.

--- a/code/Untitled.ipynb
+++ b/code/Untitled.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "0761e38b-bbc2-4987-8f42-463af4369f3b",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "d10b98b8-11ad-46bb-92ad-dd0d64f3e483",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
        "array([1.1, 1.1, 1.1, 1. , 1. ])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "2a149377-6482-4cba-922c-efa1d89326c4",
    "metadata": {},
    "outputs": [],
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "32fd90f8-c4aa-4b80-a784-5781ac7cd801",
    "metadata": {},
    "outputs": [
@@ -639,7 +639,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  2  ][ \u001b[93mwarning\u001b[0m ] ---v  (automatic line breaks) \n",
+      "[  3  ][ \u001b[93mwarning\u001b[0m ] ---v  (automatic line breaks) \n",
       "                      Moved cupy array from GPU 2 to GPU 3. Delete with 'del' old variable and call\n",
       "                      'GPUTools.free_cuda_after_del_cupy' to free up unused cuda memory of old variable.\n"
      ]
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4d4b43c1-37c2-4b5a-a51e-a54811267204",
    "metadata": {},
    "outputs": [],
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "20eb1444-7688-4591-9da3-524103a2f945",
    "metadata": {},
    "outputs": [],
@@ -696,11 +696,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0ad7a7a0-5548-4f24-a3ef-62d310623dbc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "del array_gpu_3\n",
+    "GPUTools.free_cuda_after_del_cupy(3)"
+   ]
   },
   {
    "cell_type": "code",
@@ -884,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cdb268dd-a2ad-4415-a797-580007a2e1f8",
    "metadata": {},
    "outputs": [],
@@ -911,6 +914,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "061a195e-7793-409b-9a31-1f7a3421ed4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "151c3f1a-df1f-4727-822a-3efb05319c3d",
    "metadata": {},
    "outputs": [],
    "source": []
