Splitting Steps of Spectral-Spatial Model
* Splitting the assemple_graph to the individual steps to be able to investigate the effects separately:
  -> apply mask
  -> apply T1 (steady state)
  -> apply T2 (decay after TE)
  -> apply concentration (of the individual metabolites)
  -> to sum all metabolite signals

Also: added small python file for streamlit.io test in the tests folder

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -44,5 +44,43 @@
   publisher={Nature Publishing Group UK London}
 }
 
+# Spoiled GRE (mriquestions)
+@online{elster_spoiled_gre_parameters,
+  author  = {Elster, A. D.},
+  title   = {Spoiled-GRE: Image Contrast},
+  year    = {2026},
+  website = {Questions and Answers in MRI},
+  url     = {https://mriquestions.com/spoiled-gre-parameters.html},
+  urldate = {2026-02-19}
+}
+
+# Steady State longitudional magnetisation
+@inproceedings{miller2014steady_state_sequences_spoiled_balanced,
+  author       = {Miller, Karla L.},
+  title        = {Steady-state sequences: Spoiled and balanced methods},
+  booktitle    = {Proceedings of the 22nd Annual Meeting of the International Society for Magnetic Resonance in Medicine (ISMRM)},
+  year         = {2014},
+  volume       = {22},
+  organization = {International Society for Magnetic Resonance in Medicine},
+  url          = {https://cds.ismrm.org/protected/14MProceedings/PDFfiles/ISMRM2014-000552.pdf},
+  urldate      = {2026-02-19},
+  note         = {ISMRM 2014 proceedings PDF (file ID: ISMRM2014-000552)}
+}
+
+# Steady State longitudional magnetisation
+@article{miller2011steady_state_mri_methods_neuroimaging,
+  author  = {Miller, Karla L. and Tijssen, Rob H. N. and Stikov, Nikola and Okell, Thomas W.},
+  title   = {Steady-state {MRI}: methods for neuroimaging},
+  journal = {Imaging in Medicine},
+  year    = {2011},
+  volume  = {3},
+  number  = {1},
+  pages   = {93--105},
+  doi     = {10.2217/IIM.10.66},
+  url     = {https://users.fmrib.ox.ac.uk/~karla/pubs/Miller_IM2011.pdf},
+  urldate = {2026-02-19}
+}
+
+
 
 
