Added chemical compounds json file
Added a json file that contains multiple informations about the metabolites:

 * full name
 * ppm peaks
 * concentration
 * text about biosignificance
 * some important thing about this metabolite in 'note'
 * reference keys with the respective 'key' of the source in the references.bib file used for the metabolite data

This chemical compounds json file is located in docs as the reference.bib file, and further can be easily extended to e.g., macromolecules

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -81,6 +81,35 @@
   urldate = {2026-02-19}
 }
 
+# The In vivo NMR Spectroscopy Book of Markus Schuster
+@book{deGraaf2019InVivoNMR,
+  title     = {In Vivo NMR Spectroscopy: Principles and Techniques},
+  author    = {de Graaf, Robin A.},
+  edition   = {3},
+  year      = {2019},
+  month     = mar,
+  publisher = {John Wiley \& Sons},
+  address   = {Chichester, UK},
+  isbn      = {9781119382546},
+  doi       = {10.1002/9781119382461},
+  url       = {https://doi.org/10.1002/9781119382461},
+  note      = {Print ISBN 9781119382546; Online ISBN 9781119382461; 568 pp.}
+}
+
+# Quantification of the brain metabolites concentration in GM and WM, but only at 2T (!)
+@article{Pouwels1998Regional,
+  author  = {Pouwels, Petra J. W. and Frahm, Jens},
+  title   = {Regional metabolite concentrations in human brain as determined by quantitative localized proton {MRS}},
+  journal = {Magnetic Resonance in Medicine},
+  year    = {1998},
+  volume  = {39},
+  number  = {1},
+  pages   = {53--60},
+  month   = jan,
+  doi     = {10.1002/mrm.1910390110},
+  pmid    = {9438437}
+}
+
 
 
 
