--- a/code/main_notebook.ipynb
+++ b/code/main_notebook.ipynb
@@ -131,28 +131,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Feb 26 20:03:30 2026       \n",
+      "Fri Feb 27 13:43:12 2026       \n",
       "+---------------------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 535.216.01             Driver Version: 535.216.01   CUDA Version: 12.2     |\n",
+      "| NVIDIA-SMI 535.274.02             Driver Version: 535.274.02   CUDA Version: 12.2     |\n",
       "|-----------------------------------------+----------------------+----------------------+\n",
       "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
       "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                                         |                      |               MIG M. |\n",
       "|=========================================+======================+======================|\n",
       "|   0  Tesla V100-DGXS-32GB           On  | 00000000:07:00.0 Off |                    0 |\n",
-      "| N/A   29C    P0              50W / 300W |    547MiB / 32768MiB |      0%      Default |\n",
+      "| N/A   41C    P0              53W / 300W |  30062MiB / 32768MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "|   1  Tesla V100-DGXS-32GB           On  | 00000000:08:00.0 Off |                    0 |\n",
-      "| N/A   30C    P0              36W / 300W |      8MiB / 32768MiB |      0%      Default |\n",
+      "| N/A   41C    P0              55W / 300W |  29121MiB / 32768MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "|   2  Tesla V100-DGXS-32GB           On  | 00000000:0E:00.0 Off |                    0 |\n",
-      "| N/A   29C    P0              37W / 300W |      8MiB / 32768MiB |      0%      Default |\n",
+      "| N/A   44C    P0             193W / 300W |   7135MiB / 32768MiB |     58%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "|   3  Tesla V100-DGXS-32GB           On  | 00000000:0F:00.0 Off |                    0 |\n",
-      "| N/A   28C    P0              38W / 300W |      9MiB / 32768MiB |      0%      Default |\n",
+      "| N/A   44C    P0              75W / 300W |   4991MiB / 32768MiB |     82%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "                                                                                         \n",
@@ -207,7 +207,7 @@
      "output_type": "stream",
      "text": [
       "               total        used        free      shared  buff/cache   available\n",
-      "Mem:           251Gi        41Gi        55Gi        61Mi       154Gi       207Gi\n",
+      "Mem:           251Gi       108Gi       120Gi       4.7Gi        21Gi       135Gi\n",
       "Swap:             0B          0B          0B\n"
      ]
     }
@@ -288,7 +288,7 @@
     {
      "data": {
       "text/plain": [
-       "<file.Configurator at 0x7f4f0a448d60>"
+       "<file.Configurator at 0x7fca2dda3910>"
       ]
      },
      "execution_count": 12,
@@ -392,7 +392,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "daba75c0c3f840fc983a9394febbbd07",
+       "model_id": "1f69216db9794e7c90a10575d0886598",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,7 +486,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4526c0b9b2984b598053393235e4555c",
+       "model_id": "3c4a835ac1744c11848f63e6f5427491",
        "version_major": 2,
        "version_minor": 0
       },
